<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:layout_margin="25dp"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:paddingTop="10dp"
        android:src="@drawable/ic_login" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/em"
        android:inputType="textEmailAddress"
        android:text="aluno"
        tools:text="aluno@senac.br" />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sn"
        android:inputType="textPassword"
        android:text="123"
        tools:text="senha" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#008577"
        android:onClick="irParaPrincipal"
        android:text="@string/lg"
        android:textColor="#ffffff"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="406dp" />

</LinearLayout>