<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.Principal"
    tools:showIn="@layout/activity_principal">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#008577"
        android:fontFamily="sans-serif"
        android:onClick="irParaCalculo"
        android:text="@string/imc"
        android:textColor="#ffffff"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="1dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#008577"
        android:fontFamily="sans-serif"
        android:onClick="irParaConversao"
        android:text="@string/cn"
        android:textColor="#ffffff"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="1dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#008577"
        android:fontFamily="sans-serif"
        android:onClick="irParaLista"
        android:text="@string/list"
        android:textColor="#ffffff"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="1dp" />

</LinearLayout>